Converted the loading of the first page into an ajax request, fixed links on loaded pages to ajaxing those urls
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@362 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -145,12 +145,25 @@
 			</div>
 		</td>
 		<td class="right">
-			<iframe
-				name="main"
-				id="main"
-				scrolling="no"
-				src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]"
-			/>
+			<script type="text/javascript">
+			<!--/* <![CDATA[ */
+				$(document).ready( function() {
+					var url = "?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]";
+					$.get( url, null, function(data) {
+						var right = $('td.right');
+						right.html(data);
+						var links = $('td.right a');
+						links.each(function(i) {
+							if (!this.href) return true;
+
+							create_click(this, this.href);
+
+							return true;
+						});
+					});
+				});
+			/* ]]> */-->
+			</script>
 		</td>
 	</tr>
 </table>
