Fixed title saying hide when id should say show
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@364 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -831,7 +831,7 @@ function section_toggle( section ) {
 		head.style.marginBottom = '1px';
 		link.removeChild( link.firstChild );
 		link.appendChild( document.createTextNode('+') );
-		link.title = '[% str_section_hide %]';
+		link.title = '[% str_section_show %]';
 		set_cookie( section, 'hide' );
 	}
 }
