Partial fix of inaccessible links
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@366 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/common.css.tmpl
+++ b/data/templates/default/common.css.tmpl
@@ -70,7 +70,7 @@
 	overflow:           visible;
 	border-collapse:    collapse;
 }
-.right #api th, #api td {
+.right #api th, .right #api td {
 	border:             1px inset;
 	font-size:          10pt;
 	padding:            2px;
