--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -58,6 +58,9 @@
 					setTimeout("set_history()", 3000);
 			}
 			set_history();
+			$(document).load(function() {
+				alert('this ran');
+			});
 		//-->
 		</script>
 	</head>
