Fixed problem when data missing
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@370 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/api.html.tmpl
+++ b/data/templates/default/api.html.tmpl
@@ -18,6 +18,7 @@
 				[% IF list.size %]
 				<ul>
 					[% FOR item = list %]
+						[% IF item && item.class %]
 					<li>
 						[% UNLESS first %]<a href="?page=module&module=[% item.class %]&location=[% location %]" target="main">[% END %]
 							[% item.class %]
@@ -29,6 +30,7 @@
 							%]
 						[% END %]
 					</li>
+						[% END %]
 					[% END %]
 				</ul>
 				[% END %]
