Cleaned the styling a little
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@374 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -17,6 +17,8 @@ body {
 	background-color:   #ADA;
 	font-family:        serif;
 	-moz-border-radius: 5px;
+    border-top: 1px solid #8B8;
+    border-bottom: 1px solid #8B8;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	text-decoration:    none;
@@ -37,6 +39,8 @@ h1 {
 #list_td h2 {
 	padding:            5px 2px 5px 8px;
 	background-color:   #BBC5BB;
+    border-top: 1px solid #AAB5AA;
+    border-bottom: 1px solid #99A599;
 }
 h3 {
 	padding-left:       12px;
@@ -127,13 +131,14 @@ body#list_page {
 }
 #list_td h1, #list_td h2, #list_td h3 {
 	margin-top:         0px;
-	padding:            5px 2px 4px 2px;
+	padding:            5px 2px;
 	font-family:        sans-serif;
 }
 #list_td h1 {
 	font-size:          1.4em;
 	text-align:         center;
 	-moz-border-radius: 0px;
+    width: 233px;
 }
 #list_td h2 {
 	font-size:          1.2em;
