Minor tweeks to styles, added some missing styles
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@377 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -91,6 +91,13 @@ li.level4 {
 	font-size:          0.8em;
 }
 
+dt b {
+    font-weight:        bold;
+}
+dd p {
+    margin:             4px 0;
+}
+
 body #headding {
 	width: 220px;
 	overflow: hidden;
