--- a/data/templates/default/cpan.css.tmpl
+++ b/data/templates/default/cpan.css.tmpl
@@ -50,10 +50,14 @@
 	vertical-align:     middle;
 	padding:            0px 4px 0px 4px;
 }
-.right h2 {
+.right h2,
+.right h3 {
 	font-size:          medium;
 }
 .right h3 {
+	font-style:         italic;
+	padding-left:       0px;
+	background-color:   transparent;
 }
 .right h4 {
 }
@@ -65,6 +69,9 @@
 }
 .right dt {
 	font-weight:        lighter;
+}
+.right dd {
+    margin-left:        2em;
 }
 .right td {
 	padding-left:       2px;
@@ -95,4 +102,7 @@
 }
 .right li.level4 {
 	padding-left:       9em;
+}
+#file_selector {
+    display:            none;
 }
